# powerplant-coding-challenge

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: api.py
src/tests/: test_api.py
src/tests/example_payloads/: response2.json
