[tool.poetry]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "A FastAPI application to calculate optimal production plan for power plants."
authors = ["Gustavo Manzano <gussmanzano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"